--- a/src/less/general.less
+++ b/src/less/general.less
@@ -184,6 +184,7 @@ body{
 	font-size: 16px;
 	//background-color: desaturate(@color1, 30%);
 	background-color: @color1;
+	background-image: url(../img/bg-body.png);
 }
 a{
 	cursor: pointer;
