--- a/src/less/cabecero.less
+++ b/src/less/cabecero.less
@@ -89,5 +89,45 @@
 				}
 			}
 		}
+		.menu-accesorios{
+			width: 105px;
+			position: absolute;
+			left: 0;
+			top: 120px;
+			background-color: lighten(@color1, 10%);
+			z-index: 12;
+			border-top: 3px solid #222;
+			box-shadow: inset 0 0 40px rgba(0, 0, 0, .14);
+			ul{
+				list-style-type: none;
+				.no-pm;
+				font-family: @f-f1;
+				font-weight: 600;
+				padding-left: 6px;
+				padding-right: 6px;
+				li{
+					&:first-child{
+						a{
+							border-top: none;
+						}
+					}
+					&:last-child{
+						a{
+							border-bottom: none;
+						}
+					}
+					a{
+						display: block;
+						padding-top: 20px;
+						padding-bottom: 20px;
+						border-top: 2px solid @color1;
+						border-bottom: 2px solid lighten(@color1, 20%);
+						font-size: 20px;
+						color: #bce7ff;
+						text-shadow: 0 0 20px rgba(255, 255, 255, 0.5), 0 0 10px rgba(255, 255, 255, 0.5);
+					}
+				}
+			}
+		}
 	}
 }
