--- a/src/less/index.less
+++ b/src/less/index.less
@@ -3,11 +3,24 @@
 
 #promociones-galeria{
 	.container{
-		.promociones{
-			background-color: #5a5c76;
+		> .row{
+			border-bottom: 3px solid @color1;
+			.promociones{
+				background-color: #5a5c76;
+				box-shadow: inset 0 0 80px rgba(0, 0, 0, 0.14);
+			}
+			.galeria{
+				background-color: @color1;
+				box-shadow: inset 0 0 80px rgba(0, 0, 0, 0.14);
+			}
 		}
-		.galeria{
-			background-color: @color1;
+	}
+}
+
+#te-puede-interesar{
+	.container{
+		&.cont{
+			background-color: #77799b;
 		}
 	}
 }
