Avance en home, sin responsivo

--- a/recursos/css/pie.css
+++ b/recursos/css/pie.css
@@ -1,1 +1,1 @@
-#pie{padding-top:40px;padding-bottom:40px;background-color:#111;color:#fff;font-size:12px}#pie .logo{padding-bottom:12px}#pie .st-red{display:inline-block;width:40px;height:40px;line-height:40px;background-color:#fff;margin:8px;color:#111;font-size:18px;border-radius:20px}#pie .st-red:hover{background-color:#30313f}
+#pie{background-color:#303e94;border-top:3px solid #30313f;padding-top:10px;padding-bottom:10px;vertical-align:middle}
