--- a/src/less/cabecero.less
+++ b/src/less/cabecero.less
@@ -85,9 +85,52 @@
 						border-top: 2px solid #2193d7;
 						border-bottom: 2px solid @color2;
 						color: @color2;
+						&:hover{
+							color: @blanco;
+						}
 					}
 				}
 			}
+		}
+		#alternador-menu-accesorios{
+			@t: 52px;
+			width: @t;
+			height: @t;
+			//background-color: rgba(255, 255, 255, 0.2);
+			position: absolute;
+			top: 120px;
+			left: 14px;
+			border-radius: 4px;
+			z-index: 12;
+			color: @blanco;
+			text-shadow: rgba(0, 0, 0, 0.5);
+			//line-height: @t;
+			//text-align: center;
+			cursor: pointer;
+			//box-shadow: 0 0 40px rgba(0, 0, 0, .3);
+			transition-property: left, transform;
+			transition-duration: .2s;
+			background-image: url(../img/bg-menu-accesorios.png);
+			&:hover{
+				transform: scale(.96);
+			}
+			.flecha{
+				position: absolute;
+				@t: 20px;
+				width: @t;
+				height: @t;
+				text-align: center;
+				line-height: @t;
+				font-size: 12px;
+				right: 0;
+				bottom: 0;
+				background-color: #000;
+				color: @blanco;
+				border-radius: (@t / 2);
+				box-shadow: 0 0 10px @color3;
+			}
+
+
 		}
 		.menu-accesorios{
 			width: 105px;
@@ -97,7 +140,8 @@
 			background-color: lighten(@color1, 10%);
 			z-index: 12;
 			border-top: 3px solid #222;
-			box-shadow: inset 0 0 40px rgba(0, 0, 0, .14);
+			box-shadow: inset 0 0 40px rgba(0, 0, 0, .3), 0 0 40px rgba(0, 0, 0, .4);
+			display: none;
 			ul{
 				list-style-type: none;
 				.no-pm;
@@ -118,13 +162,16 @@
 					}
 					a{
 						display: block;
-						padding-top: 20px;
-						padding-bottom: 20px;
+						padding-top: 26px;
+						padding-bottom: 26px;
 						border-top: 2px solid @color1;
 						border-bottom: 2px solid lighten(@color1, 20%);
 						font-size: 20px;
 						color: #bce7ff;
 						text-shadow: 0 0 20px rgba(255, 255, 255, 0.5), 0 0 10px rgba(255, 255, 255, 0.5);
+						&:hover{
+							color: @blanco;
+						}
 					}
 				}
 			}
