--- a/src/less/index.less
+++ b/src/less/index.less
@@ -8,6 +8,7 @@
 			.promociones{
 				background-color: #5a5c76;
 				box-shadow: inset 0 0 80px rgba(0, 0, 0, 0.14);
+				min-height: 297px;
 			}
 			.galeria{
 				background-color: @color1;
@@ -21,6 +22,7 @@
 	.container{
 		&.cont{
 			background-color: #77799b;
+			box-shadow: inset 0 0 80px rgba(0, 0, 0, .2);
 		}
 	}
 }
