--- a/src/less/pie.less
+++ b/src/less/pie.less
@@ -3,27 +3,9 @@
 
 
 #pie{
-	padding-top: 40px;
-	padding-bottom: 40px;
-	background-color: #111;
-	color: @blanco;
-	font-size: 12px;
-	.logo{
-		padding-bottom: 12px;
-	}
-	.st-red{
-		@t: 40px;
-		display: inline-block;
-		width: @t;
-		height: @t;
-		line-height: @t;
-		background-color: @blanco;
-		margin: 8px;
-		color: #111;
-		font-size: 18px;
-		border-radius: (@t / 2);
-		&:hover{
-			background-color: @color1;
-		}
-	}
+	background-color: #303e94;
+	border-top: 3px solid @color1;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	vertical-align: middle;
 }
