--- a/src/less/index.less
+++ b/src/less/index.less
@@ -23,6 +23,68 @@
 		&.cont{
 			background-color: #77799b;
 			box-shadow: inset 0 0 80px rgba(0, 0, 0, .2);
+			text-align: center;
+			.etiquetas{
+				padding-left: 15px;
+				padding-right: 15px;
+				.txt{
+					background-color: @color1;
+				}
+				.tanques{
+					.bg{
+						background-image: url(../img/img-tanques.jpg);
+					}
+				}
+				.racks{
+					.bg{
+						background-image: url(../img/img-racks.jpg);
+					}
+				}
+				.bicicleteros{
+					.bg{
+						background-image: url(../img/img-bicicleteros.jpg);
+					}
+				}
+			}
+		}
+	}
+}
+@media (min-width:768px){
+	#te-puede-interesar{
+			.container{
+				&.cont{
+					.etiquetas{
+						.cuadro{
+							height: 120px;
+						}
+					}				
+				}
+			}
+		}
+	}
+@media (min-width:992px){
+	#te-puede-interesar{
+		.container{
+			&.cont{
+				.etiquetas{
+					.cuadro{
+						height: 156px;
+					}
+				}				
+			}
+		}
+	}
+}
+@media (min-width:1200px){
+	#te-puede-interesar{
+		.container{
+			&.cont{
+				.etiquetas{
+					.cuadro{
+						height: 190px;
+					}
+				}				
+			}
 		}
 	}
 }
