--- a/recursos/css/pie.css
+++ b/recursos/css/pie.css
@@ -1,1 +1,7 @@
-#pie{background-color:#303e94;border-top:3px solid #30313f;padding-top:10px;padding-bottom:10px;vertical-align:middle}
+#pie {
+  background-color: #303e94;
+  border-top: 3px solid #30313f;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  vertical-align: middle;
+}
