--- a/src/less/general.less
+++ b/src/less/general.less
@@ -497,7 +497,6 @@ a.st-enlace{
 	.contenido{
 		box-shadow: 0 0 30px rgba(0, 0, 0, 0.4);
 		margin: 60px 15px;
-		max-width: 960px;
 		position: relative;
 		display: inline-block;
 		.cerrar{
@@ -601,3 +600,21 @@ noscript{
 
 /* cabecero */
 @import (less) "pie.less";
+
+
+
+
+
+/* modal del buscador */
+#buscador{
+	background-color: #5f617c;
+	border: 3px solid @color3;
+	padding-top: 20px;
+	.form-control{
+		background-color: @color1;
+		color: @blanco;
+		border: none;
+		border-radius: 4px;
+		text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.3);
+	}
+}
