--- a/src/less/general.less
+++ b/src/less/general.less
@@ -184,7 +184,7 @@ body{
 	font-size: 16px;
 	//background-color: desaturate(@color1, 30%);
 	background-color: @color1;
-	background-image: url(../img/bg-body.png);
+	background-image: url(../img/patron-fondo.jpg);
 	background-attachment: fixed;
 }
 a{
@@ -610,6 +610,7 @@ noscript{
 	background-color: #5f617c;
 	border: 3px solid @color3;
 	padding-top: 20px;
+	border-radius: 6px;
 	.form-control{
 		background-color: @color1;
 		color: @blanco;
