--- a/src/less/pie.less
+++ b/src/less/pie.less
@@ -3,9 +3,27 @@
 
 
 #pie{
-	background-color: #303e94;
+	//background-color: #303e94; 43509f
+	background: linear-gradient(90deg, #2e3d94, #4551a0 50%, #2e3d94 60%);
 	border-top: 3px solid @color1;
 	padding-top: 10px;
 	padding-bottom: 10px;
 	vertical-align: middle;
+	color: #c3e9ff;
+	.chat{
+		a{
+			text-transform: uppercase;
+			font-size: 24px;
+			font-family: @f-f1;
+			font-weight: 600;
+			color: #c3e9ff;
+		}
+	}
+	.redes{
+		text-align: right;
+		padding-right: 72px;
+		a{
+			color: lighten(@color3, 10%);
+		}
+	}
 }
