--- a/recursos/css/pie.css
+++ b/recursos/css/pie.css
@@ -1,1 +1,1 @@
-#pie{background-color:#303e94;border-top:3px solid #30313f;padding-top:10px;padding-bottom:10px;vertical-align:middle}
+#pie{background:linear-gradient(90deg,#2e3d94,#4551a0 50%,#2e3d94 60%);border-top:3px solid #30313f;padding-top:10px;padding-bottom:10px;vertical-align:middle;color:#c3e9ff}#pie .chat a{text-transform:uppercase;font-size:24px;font-family:Bebas;font-weight:600;color:#c3e9ff}#pie .redes{text-align:right;padding-right:72px}#pie .redes a{color:#65caf3}
