--- a/src/less/index.less
+++ b/src/less/index.less
@@ -22,23 +22,28 @@
 
 /* slider */
 #slider{
-	.slider{
-		position: relative;
-		.boton-selecciona-vehiculo{
-			display: block;
-			position: absolute;
-			background-color: transparent;
-			z-index: 12;
-			@t: 180px;
-			width: @t;
-			height: @t;
-			right: 40px;
-			top: 40px;
-			background-image: url(../img/boton-selecciona-vehiculo.png);
-			&:hover{
-				animation-name: selecciona-vehiculo;
-				animation-duration: .8s;
-				animation-iteration-count: 1;
+	#rotabanner{
+		.carousel-inner{
+			.item{
+				background-position: center;
+				background-repeat: no-repeat;
+				height: 560px;
+				&.sld-1{
+					background-image: url(../img/sld-1.jpg);
+				}
+				&.sld-2{
+					background-image: url(../img/sld-2.jpg);
+				}
+				&.sld-3{
+					background-image: url(../img/sld-3.jpg);
+				}
+				.container{
+					.row{
+						.col-xs-12{
+							height: 560px;
+						}
+					}
+				}
 			}
 		}
 	}
@@ -47,33 +52,49 @@
 
 
 #promociones-galeria{
+	background-color: #5a5c76;
+	border-bottom: 3px solid lighten(@color1, 8%);
+	box-shadow: inset 0 0 100px rgba(0, 0, 0, 0.14);
 	.container{
 		> .row{
-			border-bottom: 3px solid lighten(@color1, 8%);
 			.promociones{
-				background-color: #5a5c76;
-				box-shadow: inset 0 0 80px rgba(0, 0, 0, 0.14);
 				min-height: 297px;
 			}
 			.galeria{
-				background-color: @color1;
-				box-shadow: inset 0 0 80px rgba(0, 0, 0, 0.14);
+				//background-color: @color1;
+				//box-shadow: inset 0 0 80px rgba(0, 0, 0, 0.14);
 			}
 		}
 	}
 }
 
 #te-puede-interesar{
+	background-color: #77799b;
 	.container{
 		&.cont{
-			background-color: #77799b;
-			box-shadow: inset 0 0 80px rgba(0, 0, 0, .2);
 			text-align: center;
 			.etiquetas{
 				padding-left: 15px;
 				padding-right: 15px;
 				.txt{
 					background-color: @color1;
+					position: relative;
+					overflow: hidden;
+					text-align: left;
+					background-image: url(../img/escuadra-enlace.png);
+					background-repeat: no-repeat;
+					&::after{
+						@t: 40px;
+						content: '';
+						width: @t;
+						height: @t;
+						display: block;
+						position: absolute;
+						right: -(@t / 2);
+						top: -(@t / 2);
+						background-color: @color3;
+						transform: rotate(45deg);
+					}
 				}
 				.tanques{
 					.bg{
@@ -99,6 +120,14 @@
 			.container{
 				&.cont{
 					.etiquetas{
+						.txt{
+							font-size: 18px;
+							i{
+
+								display: inline-block;
+								padding-top: 40px;
+							}
+						}
 						.cuadro{
 							height: 120px;
 						}
