Buscador en home

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -23,6 +23,21 @@
 @import (less) "slider-intro.less";
 
 
+#buscador{
+	left: 50%;
+	max-width: 248px;
+	margin-left: -124px;
+	top: 100px;
+}
+@media (min-width:768px){
+	#buscador{
+		top: 180px;
+		max-width: 720px;
+		margin-left: -360px;
+	}
+}
+
+
 
 #promociones-galeria{
 	background-color: #5a5c76;
