--- a/src/less/general.less
+++ b/src/less/general.less
@@ -576,10 +576,16 @@ noscript{
 
 /* modal del buscador */
 #buscador{
-	background-color: #5f617c;
+	position: absolute;
+	background-color: fade(@color1, 60%);
 	border: 3px solid @color3;
-	padding-top: 20px;
 	border-radius: 6px;
+	z-index: 10;
+	padding-bottom: 12px;
+	.titulo{
+		color: lighten(@color3, 30%);
+		text-transform: uppercase;
+	}
 	.form-control{
 		background-color: @color1;
 		color: @blanco;
