Botón de alternar menú de accesorios

--- a/src/less/cabecero.less
+++ b/src/less/cabecero.less
@@ -96,12 +96,12 @@
 			}
 		}
 		#alternador-menu-accesorios{
-			@t: 40px;
+			@t: 34px;
 			width: @t;
 			height: @t;
 			//background-color: rgba(255, 255, 255, 0.2);
 			position: absolute;
-			top: 30px;
+			top: 32px;
 			right: 80px;
 			border-radius: 4px;
 			z-index: 18;
@@ -113,14 +113,14 @@
 			//box-shadow: 0 0 40px rgba(0, 0, 0, .3);
 			transition-property: left, transform;
 			transition-duration: .2s;
-			background-image: url(../img/bg-menu-accesorios.png);
+			background-image: url(../img/bg-menu-accesorios-l.png);
 			background-size: cover;
 			background-position: center;
 			background-repeat: no-repeat;
 			&:hover{
 				transform: scale(.96);
 			}
-			.flecha{
+			/*.flecha{
 				position: absolute;
 				@t: 20px;
 				width: @t;
@@ -134,7 +134,7 @@
 				color: @blanco;
 				border-radius: (@t / 2);
 				box-shadow: 0 0 10px @color3;
-			}
+			}*/
 		}
 
 	}	
@@ -147,7 +147,6 @@
 		z-index: 18;
 		border-top: 3px solid #222;
 		box-shadow: inset 0 0 40px rgba(0, 0, 0, .3), 0 0 40px rgba(0, 0, 0, .4);
-		display: none;
 		ul{
 			list-style-type: none;
 			.no-pm;
