avance en Detalle de producto

--- a/src/less/config.less
+++ b/src/less/config.less
@@ -13,7 +13,8 @@
 @min-width: 320px;
 @color1: #30313f; // verde corporativo
 @color2: #2e3d98; // verde oscuro 
-@color3: #36baef; // amarillo corporativo 
+@color3: #36baef; // azul  
+@color4: #bce7ff; // azul claro 
 //rutas
 @f-url: '../fonts/';
 //otros
