--- a/src/less/general.less
+++ b/src/less/general.less
@@ -266,6 +266,75 @@ a.st-enlace{
 }
 
 
+/* calificación con estrellas */
+.st-calificacion{
+    display: inline-block;
+    font-family: 'FontAwesome';
+    font-style: normal;
+    font-size: 16px;
+    &.valor-0{
+        &:before{
+            color: @color3;
+            content: '';
+        }
+        &:after{
+            content: '\f005\00a0\f005\00a0\f005\00a0\f005\00a0\f005';
+            color: @gris
+        }
+    }
+    &.valor-1{
+        &:before{
+            color: @color3;
+            content: '\f005';
+        }
+        &:after{
+            content: '\00a0\f005\00a0\f005\00a0\f005\00a0\f005';
+            color: @gris
+        }
+    }
+    &.valor-2{
+        &:before{
+            color: @color3;
+            content: '\f005\00a0\f005';
+        }
+        &:after{
+            content: '\00a0\f005\00a0\f005\00a0\f005';
+            color: @gris
+        }
+    }
+    &.valor-3{
+        &:before{
+            color: @color3;
+            content: '\f005\00a0\f005\00a0\f005';
+        }
+        &:after{
+            content: '\00a0\f005\00a0\f005';
+            color: @gris
+        }
+    }
+    &.valor-4{
+        &:before{
+            color: @color3;
+            content: '\f005\00a0\f005\00a0\f005\00a0\f005';
+        }
+        &:after{
+            content: '\00a0\f005';
+            color: @gris
+        }
+    }
+    &.valor-5{
+        &:before{
+            color: @color3;
+            content: '\f005\00a0\f005\00a0\f005\00a0\f005\00a0\f005';
+        }
+        &:after{
+            content: '';
+            color: @gris
+        }
+    }
+}
+
+
 // Crear tamaños de fuente
 .txt-sizes(8, 44);
 
@@ -283,6 +352,7 @@ a.st-enlace{
 .color(color1, @color1);
 .color(color2, @color2);
 .color(color3, @color3);
+.color(color4, @color4);
 
 .no-padding-left{
 	padding-left: 0;
@@ -738,6 +808,93 @@ noscript{
 					font-weight: 700;
 					padding: 6px 8px;
 					font-size: 22px;
+					transition-property: transform;
+					transition-duration: .2s;
+					&:hover{
+						transform: scale(1.06);
+					}
+				}
+			}
+		}
+	}
+}
+
+
+
+
+#detalle-producto{
+	display: none;
+	position: fixed;
+	overflow: auto;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	z-index: 20;
+	background-color: rgba(0, 0, 0, 0.8);
+	padding-top: 60px;
+	.container{
+		background-color: #5f627c;
+		position: relative;
+		box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+		border: 6px solid @color2;
+		outline: 2px solid @color3;
+		padding-top: 15px;
+		padding-bottom: 15px;
+		box-shadow: 0 0 60px rgba(0, 0, 0, .4);
+		.cerrar{
+			@t: 34px;
+			position: absolute;
+			width: @t;
+			height: @t;
+			border-radius: (@t / 2);
+			background-color: @color2;
+			border: 1px solid @color3;
+			right: -18px;
+			top: -18px;
+			line-height: @t;
+			text-align: center;
+			color: @blanco;
+			cursor: pointer;
+			&::before{
+				content: 'x'
+			}
+		}
+		.producto{
+			.imagen{
+				img{
+					border-radius: 6px;
+					box-shadow: 4px 4px 4px rgba(0, 0, 0, .6);
+				}
+			}
+			.nombre{
+				font-weight: 900;
+				text-shadow: 0 0 20px @color3;
+			}
+			.form-control{
+				background-color: @color1;
+				color: @blanco;
+				border: none;
+				border-radius: 4px;
+				text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.3);
+			}
+		}	
+	}
+}
+@media (min-width:768px){
+
+}
+@media (min-width:992px){}
+@media (min-width:1200px){
+	#detalle-producto{
+		.container{
+			.producto{
+				.nombre{
+					font-size: 80px;
+					line-height: 80px;
+				}
+				.unidades{
+					font-size: 18px;
 				}
 			}
 		}
