--- a/src/less/cabecero.less
+++ b/src/less/cabecero.less
@@ -15,134 +15,112 @@
 }
 
 #cabecero{
-	@h: 100px;
+	@alto-cabecero: 84px;
 	width: 100%;
-	height: @h;
+	height: @alto-cabecero;
 	background-color: fade(@color1, 80%);
 	box-shadow: 0 0 10px rgba(0, 0, 0, .2);
-	position: relative;
 	z-index: 18;
-	.container{
-		height: @h;
-		position: relative;
-		background-image: url(../img/bg-cabecero.png);
+	height: @alto-cabecero;
+	position: relative;
+	background-image: url(../img/bg-cabecero.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	.logo{
+		display: block;
+		position: absolute;
+		left: 0;
+		top: 0;
+		transform-origin: 50% 0;
+		width: 220px;
+		&:hover{
+			animation-name: logo;
+			animation-duration: .4s;
+			animation-iteration-count: 1;
+		}
+	}
+	#alternador-menu{
+		display: block;
+		width: @alto-cabecero;
+		height: @alto-cabecero;
+		background-image: url(../img/alternador-menu.png);
+		position: absolute;
 		background-repeat: no-repeat;
 		background-position: center;
-		.logo{
-			display: block;
-			position: absolute;
-			left: 0;
-			top: 0;
-			transform-origin: 50% 0;
-			width: 220px;
-			&:hover{
-				animation-name: logo;
-				animation-duration: .4s;
-				animation-iteration-count: 1;
-			}
-		}
-		#alternador-menu{
-			display: block;
-			width: 55px;
-			height: 38px;
-			background-image: url(../img/alternador-menu.png);
-			position: absolute;
-			right: 15px;
-			top: 30px;
-			cursor: pointer;
-			z-index: 20;
-		}
-		.menu{
-			position: absolute;
-			width: 280px;
-			top: 0;
-			right: 0;
-			background-color: #42bef0;
-			z-index: 19;
-			box-shadow: 0 0 12px rgba(0, 0, 0, .2);
-			display: none;
-			ul{
-				list-style: none;
-				.no-pm;
-				font-family: @f-f1;
-				padding-top: 92px;
-				font-size: 22px;
-				font-weight: 500;
-				padding-left: 10px;
-				padding-right: 10px;
-				li{
-					&:first-child{
-						a{
-							border-top: none;
-						}
-					}
-					&:last-child{
-						a{
-							border-bottom: none;
-						}
-					}
+		right: 0;
+		top: 0;
+		cursor: pointer;
+		z-index: 20;
+		background-color: rgba(0, 0, 0, 0.4);
+	}
+	.menu{
+		position: absolute;
+		width: 280px;
+		top: 0;
+		right: 0;
+		background-color: #42bef0;
+		z-index: 19;
+		box-shadow: 0 0 12px rgba(0, 0, 0, .2);
+		display: none;
+		ul{
+			list-style: none;
+			.no-pm;
+			font-family: @f-f1;
+			padding-top: 92px;
+			font-size: 22px;
+			font-weight: 500;
+			padding-left: 10px;
+			padding-right: 10px;
+			li{
+				&:first-child{
 					a{
-						display: block;
-						padding-top: 24px;
-						padding-bottom: 20px;
-						border-top: 2px solid #2193d7;
-						border-bottom: 2px solid @color2;
-						color: @color2;
-						&:hover{
-							color: @blanco;
-						}
+						border-top: none;
+					}
+				}
+				&:last-child{
+					a{
+						border-bottom: none;
+					}
+				}
+				a{
+					display: block;
+					padding-top: 24px;
+					padding-bottom: 20px;
+					border-top: 2px solid #2193d7;
+					border-bottom: 2px solid @color2;
+					color: @color2;
+					&:hover{
+						color: @blanco;
 					}
 				}
 			}
 		}
-		#alternador-menu-accesorios{
-			@t: 34px;
-			width: @t;
-			height: @t;
-			//background-color: rgba(255, 255, 255, 0.2);
-			position: absolute;
-			top: 32px;
-			right: 80px;
-			border-radius: 4px;
-			z-index: 18;
-			color: @blanco;
-			text-shadow: rgba(0, 0, 0, 0.5);
-			//line-height: @t;
-			//text-align: center;
-			cursor: pointer;
-			//box-shadow: 0 0 40px rgba(0, 0, 0, .3);
-			transition-property: left, transform;
-			transition-duration: .2s;
-			background-image: url(../img/bg-menu-accesorios-l.png);
-			background-size: cover;
-			background-position: center;
-			background-repeat: no-repeat;
-			&:hover{
-				transform: scale(.96);
-			}
-			/*.flecha{
-				position: absolute;
-				@t: 20px;
-				width: @t;
-				height: @t;
-				text-align: center;
-				line-height: @t;
-				font-size: 12px;
-				right: 0;
-				bottom: 0;
-				background-color: #000;
-				color: @blanco;
-				border-radius: (@t / 2);
-				box-shadow: 0 0 10px @color3;
-			}*/
-		}
 
 	}	
+	#alternador-menu-accesorios{
+		background-color: rgba(0, 0, 0, 0.4);
+		width: @alto-cabecero;
+		height: @alto-cabecero;
+		position: absolute;
+		top: 0px;
+		right: 85px;
+		border-radius: 4px;
+		z-index: 18;
+		color: @blanco;
+		text-shadow: rgba(0, 0, 0, 0.5);
+		cursor: pointer;
+		transition-property: left, transform;
+		transition-duration: .2s;
+		background-image: url(../img/bg-menu-accesorios-l.png);
+		
+		background-position: center;
+		background-repeat: no-repeat;
+	}
 	.menu-accesorios{
 		width: 105px;
 		position: absolute;
 		left: 0;
-		top: 120px;
+		top: 88px;
 		background-color: lighten(@color1, 10%);
 		z-index: 18;
 		border-top: 3px solid #222;
@@ -194,14 +172,23 @@
 			}
 		}
 	}
+
+	#usuario{
+		position: absolute;
+		right: 169px;
+		top: 0;
+		padding-right: 10px;
+		height: @alto-cabecero;
+		padding-top: 20px;
+		background-repeat: no-repeat;
+		background-position: center;
+	}
 }
 
 @media (min-width:768px){
 	#cabecero{
-		.container{
-			.logo{
-				width: 320px;
-			}
+		.logo{
+			width: 320px;
 		}
 	}
 }
