--- a/src/less/general.less
+++ b/src/less/general.less
@@ -564,6 +564,107 @@ a.st-enlace{
 	}	
 }
 
+/* modal TYM */
+.modal-tym{
+	.contenido{
+		margin-top: 100px;
+		//max-width: 96%;
+		display: block;
+		.cont{
+			display: block;
+			position: relative;
+			background-color: @color1;
+			padding: 30px;
+			border: 6px solid @color2;
+			outline: 2px solid @color3;
+			background-image: url(../img/bg-cabecero.png);
+			background-repeat: no-repeat;
+			background-position: right 20px top 20px;
+			.titulo{
+				position: absolute;
+				width: 220px;
+				height: 52px;
+				top: -26px;
+				left: 10px;
+				background-image: url(../img/titulo-contacto.png);
+				background-repeat: no-repeat;
+				background-position: center;
+				background-size: cover;
+				text-transform: uppercase;
+				text-shadow: 0 0 30px fade(@color3, 80%), 0 0 20px fade(@color3, 80%), 0 0 10px fade(@color3, 80%);
+				h1{
+					margin: 0;
+					padding: 0;
+					font-size: 22px;
+					padding-top: 16px;
+					padding-left: 44px;
+					text-align: left;
+				}
+			}
+			.subtitulo{
+				text-align: center;
+				background: linear-gradient(to right, transparent, rgba(0,0,0,0.8), transparent);
+				padding-top: 20px;
+				padding-bottom: 20px;
+				h1, h2, h3, h4{
+					margin: 0;
+				}
+			}
+			.tabla{
+				width: 100%;
+				thead{
+					tr{
+						th{
+							padding-top: 14px;
+							color: @color4;
+							text-align: center;
+						}
+					}
+				}
+				tbody{
+					tr{
+						td{
+							padding-top: 12px;
+							padding-bottom: 12px;
+							padding-left: 10px;
+							padding-right: 10px;
+						}
+					}
+				}
+			}
+		}
+	}
+}
+
+@media (min-width:768px){
+	.modal-tym{
+		.contenido{
+			display: inline-block;
+			.cont{
+				min-width: 600px;
+				padding-top: 70px;
+				.titulo{
+					width: 428px;
+					height: 101px;
+					top: -50px;
+					left: 20px;
+					h1{						
+						padding-top: 32px;
+						padding-left: 90px;
+						font-size: 36px;
+					}
+				}
+			}
+		}
+	}
+}
+@media (min-width:992px){
+
+}
+@media (min-width:1200px){
+
+}
+
 /* noscript */
 noscript{
 	position: fixed;
@@ -768,7 +869,7 @@ noscript{
 		box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 		border: 2px solid @color3;
 		border-radius: 8px;
-		top: 120px;
+		top: 88px;
 		left: 120px;
 		right: 15px;
 		max-width: 1200px;
