menu de accesorios responsivo, ajuste de botón, carro de compra

--- a/src/less/cabecero.less
+++ b/src/less/cabecero.less
@@ -183,6 +183,19 @@
 		background-repeat: no-repeat;
 		background-position: center;
 	}
+
+	#btn-carro-compras{
+		position: fixed;
+		right: -8px;
+		top: 96px;
+		z-index: 10;
+		border-radius: 6px 0 0 6px;
+		padding-right: 20px;
+		background-color: fade(@color3, 80%);
+		.badge{
+			font-weight: 300;
+		}
+	}
 }
 
 @media (min-width:768px){
