--- a/src/less/index.less
+++ b/src/less/index.less
@@ -185,3 +185,22 @@
 		}
 	}
 }
+
+#boton-busqueda-vehiculo{
+
+}
+@media (min-width:768px){
+	#boton-busqueda-vehiculo{
+		background-color: transparent !important;
+		box-shadow: none;
+		width: 180px;
+		height: 180px;
+		background-image: url(../img/boton-selecciona-vehiculo.png);
+		position: absolute;
+		right: -60px;
+		top: -84px;
+		span{
+			display: none;
+		}
+	}
+}
