--- a/src/less/index.less
+++ b/src/less/index.less
@@ -32,8 +32,14 @@
 @media (min-width:768px){
 	#buscador{
 		top: 180px;
-		max-width: 720px;
-		margin-left: -360px;
+		max-width: 680px;
+		margin-left: -340px;
+	}
+}
+@media (min-width:960px){
+	#buscador{
+		max-width: 800px;
+		margin-left: -400px;
 	}
 }
 
@@ -193,12 +199,14 @@
 	#boton-busqueda-vehiculo{
 		background-color: transparent !important;
 		box-shadow: none;
-		width: 180px;
-		height: 180px;
+		width: 146px;
+		height: 146px;
 		background-image: url(../img/boton-selecciona-vehiculo.png);
+		background-position: center;
+		background-repeat: no-repeat;
 		position: absolute;
-		right: -60px;
-		top: -84px;
+		right: -34px;
+		top: -70px;
 		span{
 			display: none;
 		}
