--- a/src/less/general.less
+++ b/src/less/general.less
@@ -27,7 +27,6 @@
 .define-font("@{f-url}BebasNeue Regular.ttf", @f-f1, normal, 500);
 .define-font("@{f-url}BebasNeue Bold.ttf", @f-f1, normal, 600);
 
-
 /* animaciones */
 @keyframes rebote{
 	50%{
@@ -923,8 +922,10 @@ noscript{
 		}
 	}
 	.tipo{
+		max-width: 90px;
+		margin: 0 auto;
 		.cuadro{
-			height: 160px;
+			height: 90px;
 			background-color: @color1;
 		}
 	}
