--- a/src/less/cabecero.less
+++ b/src/less/cabecero.less
@@ -194,7 +194,10 @@
 		z-index: 10;
 		border-radius: 6px 0 0 6px;
 		padding-right: 20px;
-		background-color: fade(@color3, 80%);
+		background-color: fade(@rojo, 80%);
+		font-size: 12px;
+		transition-property: font-size, right;
+		transition-duration: .4s;
 		.badge{
 			font-weight: 300;
 		}
