--- a/src/less/general.less
+++ b/src/less/general.less
@@ -966,6 +966,7 @@ noscript{
 			background-color: #ccc;
 			background-position: center;
 			background-size: cover;
+			padding-top: 46px;
 			&.img1{
 				background-image: url(../img/img-tanques.jpg);
 			}
@@ -977,7 +978,6 @@ noscript{
 			}
 		}
 		.btn{
-			margin-top: -72px;
 			padding: 2px 4px !important;
 			box-shadow: 0 0 12px rgba(0, 0, 0, 0.4);
 		}
