slider provisional de productos compatibles con rin en detalle de producto

--- a/src/less/general.less
+++ b/src/less/general.less
@@ -1051,7 +1051,18 @@ noscript{
 				border-radius: 4px;
 				text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.3);
 			}
-		}	
+		}
+		#slide-productos-compatibles{
+			li{
+				padding: 0 8px;
+				a{
+					background-color: @blanco;
+					display: inline-block;
+					padding: 4px;
+					border-radius: 4px;
+				}
+			}
+		}
 	}
 }
 @media (min-width:768px){
