--- a/src/less/index.less
+++ b/src/less/index.less
@@ -75,17 +75,19 @@
 				}
 				.tanques{
 					.bg{
-						background-image: url(../img/img-tanques.jpg);
+						background-image: url(../img/footer-products.jpg);
+						background-size: cover;
 					}
 				}
 				.racks{
 					.bg{
-						background-image: url(../img/img-racks.jpg);
+						background-image: url(../img/footer-pijamas.jpg);
 					}
 				}
 				.bicicleteros{
 					.bg{
 						background-image: url(../img/img-bicicleteros.jpg);
+						background-size: cover;
 					}
 				}
 				.txt{
@@ -146,7 +148,7 @@
 						.cuadro{
 							height: 120px;
 						}
-					}				
+					}
 				}
 			}
 		}
@@ -166,7 +168,7 @@
 					.cuadro{
 						height: 156px;
 					}
-				}				
+				}
 			}
 		}
 	}
@@ -180,13 +182,13 @@
 						background-position: right -10px bottom 34px;
 						i{
 							font-size: 26px;
-							padding-top: 74px;
+							padding-top: 41px;
 						}
 					}
 					.cuadro{
 						height: 190px;
 					}
-				}				
+				}
 			}
 		}
 	}
