--- a/recursos/css/general.css
+++ b/recursos/css/general.css
@@ -20,3 +20,8 @@
 .thumbnail-option-active{
     box-shadow: 4px 4px 4px rgb(91, 192, 222)!important;
 }
+
+#modal-politicas-de-garantia{
+    z-index: 22;
+    width: 50%;
+}
