--- a/Produccion/recursos/css/general.css
+++ b/Produccion/recursos/css/general.css
@@ -12,6 +12,7 @@
     border-radius: 5px 0px 0px 5px;
     line-height: 5px;
     padding: 5px 0px;
+    box-shadow: 0 0 10px -3px black;
 }
 .telefono_whatsapp p{
     display: none;
@@ -1096,7 +1097,7 @@ a.st-enlace:hover::after {
 #cabecero #btn-carro-compras {
     position: fixed;
     right: -8px;
-    top: 175px;
+    top: 187px;
     z-index: 10;
     background-color: #a91015 !important;
     border-radius: 6px 0 0 6px;
@@ -1435,12 +1436,12 @@ noscript {
 }
 
 #buscador {
-    position: absolute;
-    background-color: rgba(48,49,63,.6);
-    border: 3px solid #36baef;
+    position: initial;
     border-radius: 6px;
     z-index: 10;
-    padding-bottom: 12px
+    padding-bottom: 12px;
+    margin-top: 100px;
+    width: calc(100% - 70px);
 }
 
 #buscador .titulo {
@@ -1453,6 +1454,7 @@ noscript {
     color: #000;
     border-radius: 4px;
     box-shadow: 0 0 10px -3px;
+    margin-top: 10px;
 }
 
 #modal-contacto {
